re PR middle-end/9967 (Some standard C function calls should not be replaced when optimizing for size)

gcc:
	PR middle-end/9967
	* builtins.c (expand_builtin_fputs): When optimizing for size,
	don't transform fputs into fwrite.
testsuite:
	PR middle-end/9967
	* gcc.c-torture/execute/stdio-opt-1.c: Adjust test for change to
	builtin fputs.

From-SVN: r65033