gcc/testsuite/gcc.c-torture/execute/stdio-opt-1.c
@@ -54,7 +54,7 @@ int main()
   return 0;
 }
 
-#ifdef __OPTIMIZE__
+#if defined (__OPTIMIZE__) && ! defined (__OPTIMIZE_SIZE__)
 /* When optimizing, all the above cases should be transformed into
    something else.  So any remaining calls to the original function
    should abort.  */
